tests/fail/03_redeclaration.c
int main() {
	int x = 5;
	int x = 10;  // ERROR: redeclaration
	return x;
}
